<resources>
    <string name="app_name">ScrcpyForAndroid</string>

    <string name="label_server_ip">Remote Device IP address, For example: 192.168.0.73</string>
    <string name="label_video_resolution">Resolution</string>
    <string name="delay_control">Delay Control</string>
    <string name="label_video_bitrate">Bitrate</string>
    <string name="label_x">x</string>
    <string name="action_start">Start</string>
    <string name="appswitch_button">=</string>
    <string name="home_button">o</string>
    <string name="back_button">\u003C</string>
    <string name="power_button">Power</string>
    <string name="switch0">Viewing mode (no control)</string>
    <string name="switch1">Bottom control button (back button)</string>
    <string name="switch_screen_off">Screen-off Control</string>
    <string name="switch_audio_forward">Audio forwarding</string>
    <string name="switch_capture_keys">Capture Volume keys</string>

    <string name="history_title">Connection History</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="no_history">No history records</string>

    <string name="connect_tips">Tips: You need to enable wireless debugging on your phone\n\t\tReset adb port command: adb tcpip 5555</string>
    <string name="please_wait">Connecting …</string>

    <string name="connect_faild">Connection failed</string>
    <string name="connect_faild_ask">Do you want to retry the connection?</string>

    <string name="disconnect">Disconnect</string>
    <string name="disconnect_ask">The connection is detected to be disconnected, please exit and reconnect</string>
    <string name="connection_cancelled">Connection cancelled</string>

    <string name="need_register">Registration required</string>

    <string-array name="options_resolution_values">
        <item>2560x1440</item>
        <item>1920x1080</item>
        <item>1600x720</item>
        <item>1280x720</item>
        <item>1200x540</item>
        <item>960x720</item>
        <item>800x448</item>
        <item>640x360</item>
    </string-array>

    <string-array name="options_delay_keys">
        <item>Hight (100ms)</item>
        <item>Medium (60ms)</item>
        <item>Low (30ms)</item>
    </string-array>

    <integer-array name="options_delay_values">
        <item>100</item>
        <item>60</item>
        <item>30</item>
    </integer-array>

    <string-array name="options_bitrate_keys">
        <item>6 Mbps</item>
        <item>4 Mbps</item>
        <item>2 Mbps</item>
        <item>1 Mbps</item>
    </string-array>

    <integer-array name="options_bitrate_values">
        <item>6144000</item>
        <item>4096000</item>
        <item>2048000</item>
        <item>1024000</item>
    </integer-array>

</resources>
